modified favicon and file styles.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>The Band</title>
         <link
             rel="shortcut icon"
-            href="https://e7.pngegg.com/pngimages/388/246/png-clipart-musical-note-musical-note-angle-monochrome.png"
+            href="https://upload.wikimedia.org/wikipedia/vi/thumb/a/a1/Man_Utd_FC_.svg/2021px-Man_Utd_FC_.svg.png"
             type="image/x-icon"
         />
         <link rel="stylesheet" href="./assets/css/styles.css" />
